add java.management module to build